# btc-ordinals-parser

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: homepage.html
