[package]
name    = "ordinals_parser"
version = "0.1.0"
edition = "2021"


[dependencies]
bitcoin = "0.31"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
